# Pollka

./: Dockerfile  LICENSE  README.md  pyproject.toml
pollka/: manage.py
pollka/pollka/: asgi.py  settings.py  urls.py  wsgi.py
pollka/polls/: admin.py  models.py  serializers.py  urls.py  views.py
pollka/users/: serializers.py  urls.py  views.py
